# optimize-home-temperature

./: .env.example  .gitignore  CONTROLLER_IMPLEMENTATION.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.sisyphus/: boulder.json
.sisyphus/notepads/heater-optimization/: BLOCKER.md  BOULDER_FINAL_STATUS.md  BOULDER_HALT_FINAL.md  DIRECTIVE_COMPLIANCE_FINAL.md  INFINITE_LOOP_DETECTED.md  boulder-attempt-3.md  decisions.md  issues.md  learnings.md  milestone-phase1.md  problems.md
.sisyphus/plans/: heater-optimization.md
grafana/: dashboard.json  datasource.yml
src/: __init__.py  alerting.py  control_service.py  controller.py  data_collector.py  data_collector_main.py  ha_client.py  tier_tracker.py
tests/: test_alerting.py  test_controller.py  test_data_collector.py  test_ha_client.py  test_tier_tracker.py
tests/integration/: conftest.py  test_system_integration.py
